# cpp_socket_testing

./: .gitignore  BuildApp.sh  CMakeLists.txt  Makefile  README.md
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md
Client/src/: main.cpp
Server/: BuildApp.sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  pi-toolchain.cmake
Server/headers/: ErrorHandler.h  MessageQueue.h  SocketServer.h
Server/src/: MessageQueue.cpp  SocketServer.cpp  main.cpp
Socket_In/: CMakeLists.txt  app
Socket_Out/: CMakeCache.txt  Makefile  cmake_install.cmake
headers/: MessageQueue.h  SocketServer.h
src/: ErrorHandler.cpp  SocketServer.cpp  main.cpp
